[package]
name = "model-manager"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
indicatif = "0.17.3"
console = "0.15.5"
reqwest = {version = "0.11.17", features = ["stream", "blocking"]}
futures-util ="0.3.14"
tokio = {version = "1.28.0", features= ["full"]}
zip-extract = "0.1.2"
futures ="0.3.28"
fs_extra = "1.3.0"
chrono = "0.4.24"
async-std = "1.12.0"
